# knowerage

./: .gitignore  AGENTS.md  Cargo.toml  INSTRUCTIONS.md  LICENSE  README.md
.cargo/: config.toml
.cursor/rules/: knowerage-analysis.mdc
.github/workflows/: ci.yml  release.yml
agent_tasks/: README.md  complete_phase_0_contracts.md  complete_phase_1a_parser.md  complete_phase_1b_registry.md  complete_phase_1c_mcp.md  complete_phase_1e_node_wrapper.md  complete_phase_2b_export.md  complete_phase_2c_security.md  complete_phase_2d_instructions.md  complete_phase_2e_onboarding.md  complete_phase_3_test_plan.md  complete_phase_3a_test_registry.md  complete_phase_3b_test_parser.md  complete_phase_3c_test_mcp.md  complete_phase_3e_test_bundle.md
contracts/: contracts.md
docs/: NPM_RELEASE.md  PRACTICES_JS.md  PRACTICES_RUST.md  TEST_PLAN.md  USER_ONBOARDING.md
examples/: README.md  registry.sample.json
npm/knowerage-darwin-arm64/: package.json
npm/knowerage-darwin-x64/: package.json
npm/knowerage-linux-arm64-gnu/: package.json
npm/knowerage-linux-x64/: package.json
npm/knowerage-mcp-darwin-arm64/: package.json
npm/knowerage-mcp-darwin-x64/: package.json
npm/knowerage-mcp-linux-arm64-gnu/: package.json
npm/knowerage-mcp-linux-x64/: package.json
npm/knowerage-mcp-win32-arm64/: package.json
npm/knowerage-mcp-win32-x64/: package.json
src/: export.rs  lib.rs  main.rs  mcp.rs  parser.rs  project_scan.rs  registry.rs  security.rs  types.rs
tests/: integration_export.rs  integration_mcp.rs  integration_parser.rs  integration_registry.rs
(+12 files in other folders)
