[package]
name = "knowerage-mcp"
version = "1.0.3"
edition = "2021"
description = "Local-first MCP server for AI analysis coverage and registry freshness"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MTimma/knowerage"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
glob = "0.3"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
notify = "6"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3"
